--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,8 +77,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'androidx.compose.material3:material3-android:1.2.1'
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'androidx.compose.material3:material3-android:1.3.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     implementation 'me.saket.squigglyslider:squigglyslider:1.0.0'
     implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
