#29 Add application label customization

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,4 @@ android.nonTransitiveRClass=true
 android.nonFinalResIds=true
 org.gradle.parallel=true
 org.gradle.configuration-cache=true
+android.enableJetifier=true
