--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.autonomousapps.dependency-analysis'
+    id 'com.google.android.gms.oss-licenses-plugin'
     id 'dev.rikka.tools.refine' version '4.3.0'
     id 'org.jetbrains.kotlin.plugin.compose' version '2.0.0'
 }
@@ -138,4 +139,6 @@ dependencies {
     runtimeOnly 'com.fasterxml.woodstox:woodstox-core:6.6.2'
 
     annotationProcessor 'androidx.annotation:annotation:1.9.1'
+
+    implementation 'de.philipp-bobek:oss-licenses-parser:1.0.0'
 }
