--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,7 +109,7 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.compose.material3:material3-android:1.3.1'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
     implementation 'tk.zielony:carbon:0.17.0'
 
     implementation 'me.saket.squigglyslider:squigglyslider:1.0.0'
@@ -122,6 +122,7 @@ dependencies {
 
     // Hidden APIs
     implementation 'dev.rikka.tools.refine:runtime:4.4.0'
+    implementation 'com.github.ChickenHook:RestrictionBypass:2.2'
 
     implementation 'com.luckycatlabs:SunriseSunsetCalculator:1.2'
     implementation('com.github.sisyphsu:dateparser:1.0.11') {
