--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
             res {
                 srcDirs = ['src/main/res/common',
                            'src/main/res/themes',
+                           'src/main/res/applications',
                            'src/main/res/strings',
                            'src/main/res/extract',
                            'src/main/res/launcher',
