--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,7 @@
             android:launchMode="standard"
             android:rotationAnimation="crossfade"
             android:supportsPictureInPicture="false"
+            android:taskAffinity="@string/affinity"
             android:theme="@style/Theme.Light.Blue.Opaque" />
 
         <activity
@@ -68,6 +69,7 @@
             android:rotationAnimation="crossfade"
             android:stateNotNeeded="true"
             android:supportsPictureInPicture="false"
+            android:taskAffinity="@string/affinity"
             android:theme="@style/Theme.Light.Blue">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
