#108 Fix DEPENDENCY_INFO_BLOCK blob

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,10 @@ android {
             }
         }
     }
+    dependenciesInfo {
+        includeInApk = false
+        includeInBundle = false
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
