--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,32 +85,33 @@ dependencies {
 
     // Transitive dependencies
     // noinspection KtxExtensionAvailable
-    implementation 'androidx.activity:activity:1.10.0'
+    implementation 'androidx.activity:activity:1.10.1'
     implementation 'androidx.annotation:annotation:1.9.1'
-    implementation 'androidx.appcompat:appcompat-resources:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'androidx.asynclayoutinflater:asynclayoutinflater:1.0.0'
-    implementation 'androidx.compose.foundation:foundation:1.7.7'
-    implementation 'androidx.compose.runtime:runtime:1.7.7'
-    implementation 'androidx.compose.ui:ui-graphics:1.7.7'
-    implementation 'androidx.compose.ui:ui-unit:1.7.7'
-    implementation 'androidx.compose.ui:ui:1.7.7'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation 'androidx.appcompat:appcompat-resources:1.7.1'
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'androidx.asynclayoutinflater:asynclayoutinflater:1.1.0'
+    implementation 'androidx.compose.foundation:foundation:1.8.2'
+    implementation 'androidx.compose.runtime:runtime:1.8.2'
+    implementation 'androidx.compose.ui:ui-graphics:1.8.2'
+    implementation 'androidx.compose.ui:ui-unit:1.8.2'
+    implementation 'androidx.compose.ui:ui:1.8.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.3.0'
     // noinspection KtxExtensionAvailable
-    implementation 'androidx.core:core:1.15.0'
-    implementation 'androidx.customview:customview:1.1.0'
-    implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
+    implementation 'androidx.core:core:1.16.0'
+    implementation 'androidx.customview:customview:1.2.0'
     // noinspection KtxExtensionAvailable
-    implementation 'androidx.fragment:fragment:1.8.5'
+    implementation 'androidx.dynamicanimation:dynamicanimation:1.1.0'
+    // noinspection KtxExtensionAvailable
+    implementation 'androidx.fragment:fragment:1.8.8'
     implementation 'androidx.interpolator:interpolator:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-common:2.8.7'
-    implementation 'androidx.lifecycle:lifecycle-process:2.8.7'
+    implementation 'androidx.lifecycle:lifecycle-common:2.9.1'
+    implementation 'androidx.lifecycle:lifecycle-process:2.9.1'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
     // noinspection KtxExtensionAvailable
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-    implementation 'androidx.transition:transition:1.5.1'
+    implementation 'androidx.transition:transition:1.6.0'
     implementation 'androidx.viewpager:viewpager:1.1.0'
 
     implementation 'com.google.android.material:material:1.12.0'
