--- a/gradle.properties
+++ b/gradle.properties
@@ -12,11 +12,12 @@
 # org.gradle.parallel=true
 #Sun Jun 12 12:02:55 EEST 2022
 android.useAndroidX=true
-org.gradle.daemon=true
+org.gradle.daemon=false
+org.gradle.caching=false
+org.gradle.parallel=false
 org.gradle.configureondemand=true
 org.gradle.jvmargs=-Xms512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 android.nonTransitiveRClass=true
 android.nonFinalResIds=true
-org.gradle.parallel=true
 org.gradle.configuration-cache=true
 android.enableJetifier=false
