--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.autonomousapps.dependency-analysis'
-    id 'dev.rikka.tools.refine' version '4.3.0'
-    id 'org.jetbrains.kotlin.plugin.compose' version '2.0.0'
+    id 'dev.rikka.tools.refine' version '4.4.0'
+    id 'org.jetbrains.kotlin.plugin.compose' version '2.2.0'
 }
 
 def hasSigningConfig = ['keystorePath', 'keystorePassword', 'keyAlias', 'keyPassword']
@@ -121,11 +121,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat-resources:1.7.1'
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'androidx.asynclayoutinflater:asynclayoutinflater:1.1.0'
-    implementation 'androidx.compose.foundation:foundation:1.8.2'
-    implementation 'androidx.compose.runtime:runtime:1.8.2'
-    implementation 'androidx.compose.ui:ui-graphics:1.8.2'
-    implementation 'androidx.compose.ui:ui-unit:1.8.2'
-    implementation 'androidx.compose.ui:ui:1.8.2'
+    implementation 'androidx.compose.foundation:foundation:1.8.3'
+    implementation 'androidx.compose.runtime:runtime:1.8.3'
+    implementation 'androidx.compose.ui:ui-graphics:1.8.3'
+    implementation 'androidx.compose.ui:ui-unit:1.8.3'
+    implementation 'androidx.compose.ui:ui:1.8.3'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.3.0'
     // noinspection KtxExtensionAvailable
@@ -136,8 +136,8 @@ dependencies {
     // noinspection KtxExtensionAvailable
     implementation 'androidx.fragment:fragment:1.8.8'
     implementation 'androidx.interpolator:interpolator:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-common:2.8.7'
-    implementation 'androidx.lifecycle:lifecycle-process:2.8.7'
+    implementation 'androidx.lifecycle:lifecycle-common:2.9.2'
+    implementation 'androidx.lifecycle:lifecycle-process:2.9.2'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
     // noinspection KtxExtensionAvailable
     implementation 'androidx.palette:palette:1.0.0'
@@ -153,13 +153,14 @@ dependencies {
     implementation 'me.saket.squigglyslider:squigglyslider:1.0.0'
     implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
 
-    implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'org.jsoup:jsoup:1.17.2'
-    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.google.code.gson:gson:2.13.1'
+    implementation 'org.jsoup:jsoup:1.21.1'
+    implementation 'com.squareup.okhttp3:okhttp:5.1.0'
 
     // Hidden APIs
     implementation 'dev.rikka.tools.refine:runtime:4.4.0'
-    implementation 'com.github.ChickenHook:RestrictionBypass:2.2'
+    // Temporary, until PR is approved: https://github.com/ChickenHook/RestrictionBypass/pull/18
+    implementation 'com.github.breezy-weather:RestrictionBypass:86d4e2959e'
 
     implementation 'com.luckycatlabs:SunriseSunsetCalculator:1.2'
     implementation('com.github.sisyphsu:dateparser:1.0.11') {
@@ -170,11 +171,11 @@ dependencies {
     implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
     implementation 'org.apache.geronimo.specs:geronimo-stax-api_1.2_spec:1.2'
-    implementation('com.apptasticsoftware:rssreader:3.7.0') {
+    implementation('com.apptasticsoftware:rssreader:3.10.0') {
         exclude group: 'commons-collections', module: 'commons-collections'
     }
 
-    runtimeOnly 'com.fasterxml.woodstox:woodstox-core:6.6.2'
+    runtimeOnly 'com.fasterxml.woodstox:woodstox-core:7.1.1'
 
     annotationProcessor 'androidx.annotation:annotation:1.9.1'
 }
