--- a/app/build.gradle
+++ b/app/build.gradle
@@ -149,6 +149,7 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.transition:transition:1.6.0'
     implementation 'androidx.viewpager:viewpager:1.1.0'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.compose.material3:material3-android:1.3.2'
