--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.autonomousapps.dependency-analysis'
     id 'dev.rikka.tools.refine' version '4.4.0'
-    id 'org.jetbrains.kotlin.plugin.compose' version '2.2.0'
+    id 'org.jetbrains.kotlin.plugin.compose' version '2.2.21'
 }
 
 def hasSigningConfig = ['keystorePath', 'keystorePassword', 'keyAlias', 'keyPassword']
@@ -121,28 +121,29 @@ dependencies {
 
     // Transitive dependencies
     // noinspection KtxExtensionAvailable
-    implementation 'androidx.activity:activity:1.10.1'
+    implementation 'androidx.activity:activity:1.11.0'
     implementation 'androidx.annotation:annotation:1.9.1'
     implementation 'androidx.appcompat:appcompat-resources:1.7.1'
     implementation 'androidx.appcompat:appcompat:1.7.1'
     implementation 'androidx.asynclayoutinflater:asynclayoutinflater:1.1.0'
-    implementation 'androidx.compose.foundation:foundation:1.8.3'
-    implementation 'androidx.compose.runtime:runtime:1.8.3'
-    implementation 'androidx.compose.ui:ui-graphics:1.8.3'
-    implementation 'androidx.compose.ui:ui-unit:1.8.3'
-    implementation 'androidx.compose.ui:ui:1.8.3'
+    implementation 'androidx.compose.animation:animation-core:1.9.4'
+    implementation 'androidx.compose.foundation:foundation:1.9.4'
+    implementation 'androidx.compose.runtime:runtime:1.9.4'
+    implementation 'androidx.compose.ui:ui-graphics:1.9.4'
+    implementation 'androidx.compose.ui:ui-unit:1.9.4'
+    implementation 'androidx.compose.ui:ui:1.9.4'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.3.0'
     // noinspection KtxExtensionAvailable
-    implementation 'androidx.core:core:1.16.0'
+    implementation 'androidx.core:core:1.17.0'
     implementation 'androidx.customview:customview:1.2.0'
     // noinspection KtxExtensionAvailable
     implementation 'androidx.dynamicanimation:dynamicanimation:1.1.0'
     // noinspection KtxExtensionAvailable
-    implementation 'androidx.fragment:fragment:1.8.8'
+    implementation 'androidx.fragment:fragment:1.8.9'
     implementation 'androidx.interpolator:interpolator:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-common:2.9.2'
-    implementation 'androidx.lifecycle:lifecycle-process:2.9.2'
+    implementation 'androidx.lifecycle:lifecycle-common:2.9.4'
+    implementation 'androidx.lifecycle:lifecycle-process:2.9.4'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
     // noinspection KtxExtensionAvailable
     implementation 'androidx.palette:palette:1.0.0'
@@ -151,33 +152,32 @@ dependencies {
     implementation 'androidx.viewpager:viewpager:1.1.0'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
-    implementation 'com.google.android.material:material:1.12.0'
-    implementation 'androidx.compose.material3:material3-android:1.3.2'
+    implementation 'com.google.android.material:material:1.13.0'
+    implementation 'androidx.compose.material3:material3-android:1.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.4.0'
     implementation 'tk.zielony:carbon:0.17.0'
 
     implementation 'me.saket.squigglyslider:squigglyslider:1.0.0'
     implementation 'com.ogaclejapan.smarttablayout:library:2.0.0@aar'
 
-    implementation 'com.google.code.gson:gson:2.13.1'
-    implementation 'org.jsoup:jsoup:1.21.1'
-    implementation 'com.squareup.okhttp3:okhttp:5.1.0'
+    implementation 'com.google.code.gson:gson:2.13.2'
+    implementation 'org.jsoup:jsoup:1.21.2'
+    implementation 'com.squareup.okhttp3:okhttp:5.3.0'
 
     // Hidden APIs
     implementation 'dev.rikka.tools.refine:runtime:4.4.0'
-    // Temporary, until PR is approved: https://github.com/ChickenHook/RestrictionBypass/pull/18
-    implementation 'com.github.breezy-weather:RestrictionBypass:86d4e2959e'
+    implementation 'com.github.ChickenHook:RestrictionBypass:c59bd6a680'
 
     implementation 'com.luckycatlabs:SunriseSunsetCalculator:1.2'
     implementation('com.github.sisyphsu:dateparser:1.0.11') {
         exclude group: 'org.projectlombok'
     }
 
-    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'com.github.bumptech.glide:glide:5.0.5'
     implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
     implementation 'org.apache.geronimo.specs:geronimo-stax-api_1.2_spec:1.2'
-    implementation('com.apptasticsoftware:rssreader:3.10.0') {
+    implementation('com.apptasticsoftware:rssreader:3.11.0') {
         exclude group: 'commons-collections', module: 'commons-collections'
     }
 
