--- a/app/build.gradle
+++ b/app/build.gradle
@@ -175,12 +175,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:5.0.5'
     implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
-    implementation 'org.apache.geronimo.specs:geronimo-stax-api_1.2_spec:1.2'
-    implementation('com.apptasticsoftware:rssreader:3.11.0') {
-        exclude group: 'commons-collections', module: 'commons-collections'
-    }
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2'
+    implementation 'org.jetbrains:annotations:26.0.2-1'
 
-    runtimeOnly 'com.fasterxml.woodstox:woodstox-core:7.1.1'
+    debugImplementation 'com.prof18.rssparser:rssparser-android-debug:6.1.1'
+    implementation 'com.prof18.rssparser:rssparser:6.1.1'
 
     annotationProcessor 'androidx.annotation:annotation:1.9.1'
 }
