--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,19 +26,25 @@
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission
-        android:name="android.permission.QUERY_ALL_PACKAGES"
-        tools:ignore="QueryAllPackagesPermission" />
+
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent>
+    </queries>
 
     <application
         android:name=".Stario"
+        android:allowBackup="false"
         android:appCategory="productivity"
+        android:dataExtractionRules="@xml/data_extraction_rules"
         android:enableOnBackInvokedCallback="true"
+        android:fullBackupContent="false"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:localeConfig="@xml/locales_config"
-        android:persistent="true"
         android:rollbackDataPolicy="wipe"
         android:supportsRtl="false"
         tools:remove="android:appComponentFactory"
@@ -48,13 +54,13 @@
             android:name=".activities.settings.Settings"
             android:allowEmbedded="false"
             android:alwaysRetainTaskState="false"
+            android:autoRemoveFromRecents="true"
+            android:configChanges="orientation|screenSize|layoutDirection"
+            android:excludeFromRecents="true"
             android:exported="true"
             android:launchMode="singleTask"
             android:rotationAnimation="crossfade"
             android:supportsPictureInPicture="false"
-            android:excludeFromRecents="true"
-            android:configChanges="orientation|screenSize|layoutDirection"
-            android:autoRemoveFromRecents="true"
             android:taskAffinity="@string/affinity"
             android:theme="@style/Theme.Light.Blue.Opaque" />
 
@@ -62,11 +68,11 @@
             android:name=".activities.pages.PageManager"
             android:allowEmbedded="false"
             android:alwaysRetainTaskState="false"
+            android:autoRemoveFromRecents="true"
+            android:excludeFromRecents="true"
             android:exported="true"
             android:launchMode="standard"
             android:rotationAnimation="crossfade"
-            android:autoRemoveFromRecents="true"
-            android:excludeFromRecents="true"
             android:supportsPictureInPicture="false"
             android:taskAffinity="@string/affinity"
             android:theme="@style/Theme.Light.Blue.Opaque" />
@@ -78,7 +84,6 @@
             android:configChanges="orientation|screenSize|layoutDirection"
             android:exported="true"
             android:launchMode="singleTask"
-            android:resumeWhilePausing="true"
             android:rotationAnimation="crossfade"
             android:stateNotNeeded="true"
             android:supportsPictureInPicture="false"
